[package]
name = "fluid"
version = "0.1.0"
authors = ["Thomas Lin <dkeehl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22"
wgpu = "0.5.0"
futures = "0.3.4"
shaderc = "0.6"
bytemuck = "1.2.0"
image = "0.23"
failure = "0.1.8"
cgmath = "0.17"

